--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "fixed-merkle-tree": "^0.7.3",
     "next": "15.3.4",
+    "poseidon-lite": "^0.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "snarkjs": "^0.7.5"
